[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Characters/Enemigo.gd" type="Script" id=2]
[ext_resource path="res://Rays.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.6447, 27.2703 )

[node name="Enemigo" type="Area2D" groups=[
"enemigos",
]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Rays" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.17
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -1.41422, 80.6102 )
[connection signal="area_entered" from="." to="." method="_on_Enemigo_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Enemigo_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
